<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_details_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin_bottom"
    android:layout_marginLeft="@dimen/card_margin_left"
    android:layout_marginStart="@dimen/card_margin_left"
    android:layout_marginRight="@dimen/card_margin_right"
    android:layout_marginEnd="@dimen/card_margin_right"
    android:layout_marginTop="@dimen/card_margin_top">
    <LinearLayout
        android:id="@+id/alarm_card_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingTop="@dimen/card_margin_top"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:clickable="true">
        <include layout="@layout/repeating_picker"
            android:id="@+id/repeating_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/primary_text_size" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">
            <RelativeLayout
                android:id="@+id/contact_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/card_margin_left"
                android:gravity="start|center_vertical"
                android:minWidth="@dimen/icon_container_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_alarm_time"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_contact_black_24dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/contact_icon"
                android:layout_toRightOf="@id/contact_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_placeholder"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/primary_text_size" />

                <TextView
                    android:id="@+id/userphone_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/primary_text_size" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/name_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/card_margin_left"
                android:gravity="start|center_vertical"
                android:minWidth="@dimen/icon_container_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_alarm_label"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_label_black_24dp" />
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:hint="@string/hint_alarm_label"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/primary_text_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
