<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/time_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/card_margin_top">
        <RelativeLayout android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/time_picker_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_alarm_time"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_alarm_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/time_picker_linearlayout"
            android:layout_toEndOf="@id/time_picker_icon"
            android:layout_toRightOf="@id/time_picker_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time_placeholder"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/time_ampm_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_ampm_placeholder"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/contact_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/card_margin_left"
                        android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_alarm_time"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_contact_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/contact_icon"
            android:layout_toRightOf="@id/contact_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_placeholder"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/userphone_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <include layout="@layout/repeating_picker"
        android:id="@+id/repeating_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/time_picker_layout"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/name_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/repeating_layout"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/name_divider"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/card_margin_top">

        <RelativeLayout
            android:id="@+id/name_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_alarm_label"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_label_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/name_icon"
            android:layout_toRightOf="@id/name_icon"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_alarm_label"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/primary_text_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/label_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/name_layout"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/add_alarm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/add_confirm"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/add_confirm_text"
            android:textColor="@color/colorPrimaryTextLight"
            android:theme="@style/AppTheme.ConfirmButton" />
    </LinearLayout>


</RelativeLayout>
